# DARec-opt

./: .gitignore  .gitmodules  README.md  pyproject.toml  run_experiments.py  visualize_embeddings.ipynb
DArec_opt/: Data_Preprocessing.py  I_DArec_opt.py  OT_IAutoRec.py  OT_Train_IAutoRec.py  Train_AutoRec.py  Train_DArec.py  Train_DArec_opt.py  Train_IAutoRec.py  Train_IDArec_opt.py  Train_UDArec_opt.py  U_DArec_opt.py  comparison.ipynb  function.py
DArec_opt/I_DArec/: AutoRec.py  Data_Preprocessing.py  I_DArec.py  OT_torch_.py  Train_AutoRec.py  Train_DArec.py  evaluation.py  function.py  run_comprehensive_experiments.py  run_cross_domain_experiments.py
DArec_opt/U_DArec/: AutoRec.py  Data_Preprocessing.py  Train_AutoRec.py  Train_DArec.py  U_DArec.py  run_cross_domain_udarec_experiments.py
I-DArec/: Data_Preprocessing.py  Train_AutoRec.py  Train_DArec.py
U-DArec/: Data_Preprocessing.py  Train_AutoRec.py  Train_DArec.py
data/: download.sh  random.ipynb
examples/: comprehensive_grid_search.yaml  domain_adaptation_study.yaml  example_usage.py  quick_test.yaml
experiment_framework/: __init__.py  cli.py  config.py  evaluation.py  methods.py  runner.py  utils.py
reference/: DARec.py  Main_DARec.py
